Mmap file creation + support for unaligned files + mmap refactor